# pyxus

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/pyxus-code-review/: SKILL.md
.claude/skills/pyxus-code-review/references/: consistency.md  data_models_and_graph.md  error_handling.md  module_and_naming.md  python_best_practices.md  readability_and_scalability.md  test_patterns.md
.claude/skills/pyxus-implementation/: SKILL.md
.claude/skills/pyxus-implementation/references/: ast_visitor_guide.md  graph_extension_guide.md  pipeline_guide.md  test_guide.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
src/pyxus/: __init__.py  cli.py  server.py
src/pyxus/core/: __init__.py  analyzer.py  ast_utils.py  call_resolver.py  file_walker.py  heritage.py  import_resolver.py  scope.py  symbol_extractor.py
src/pyxus/graph/: __init__.py  models.py  persistence.py  queries.py  store.py
src/pyxus/intelligence/: __init__.py  communities.py  flows.py
src/pyxus/plugins/: __init__.py
src/pyxus/plugins/celery/: __init__.py
src/pyxus/plugins/django/: __init__.py
src/pyxus/plugins/fastapi/: __init__.py
src/pyxus/web/: __init__.py  app.py  routes.py  serializers.py
src/pyxus/web/static/: index.html
src/pyxus/web/static/assets/: index-1ABEpEQp.js  index-3JtXhg13.js  index-4ahg4VGr.css  index-5voSkfNC.css  index-9rbyowPK.js  index-A2ZU1tj3.css  index-B-TdHylL.js  index-B-p3EC0Z.js  index-B2oiLQrJ.css  index-B6DYt8xW.css  index-BFAl0iXf.js  index-BMGBlBD7.js  index-BQq0G_zu.js  index-BT1_jay9.js  index-BTUPA_UW.css  index-BVDr9930.js  index-BVVCF0TQ.js  index-BioKZMbh.js  index-BiycWPAm.js  index-BjrMNj1e.css  index-BpGHW1NL.css  index-ByzCAMym.css  index-C-yIFTNA.css  index-C45LOTs-.js  index-C5hJXAzD.js  index-C9MMLzDU.js  index-C9_Hrxdy.css  index-CDvLQqW_.js  index-CLj4tZ4P.css  index-COMXI4GZ.js  index-ChiWiqBl.js  index-CqFIZWLW.css  index-Cw-WUVgq.css  index-D3VgV0q1.js  index-D9Hi1A3L.js  index-DAulfmVd.css  index-DKT6XQWi.js  index-DLWKFSEq.js  index-DLsYF0Pa.css  index-DNyqz8Hp.css  (+11 more)
tests/: helpers.py  test_cli.py  test_integration.py  test_server.py
tests/core/: test_analyzer.py  test_ast_utils.py  test_call_resolver.py  test_file_walker.py  test_heritage.py  test_import_resolver.py  test_scope.py  test_symbol_extractor.py
tests/fixtures/complex_project/api/: handlers.py
tests/fixtures/complex_project/core/: __init__.py  base.py  registry.py
tests/fixtures/simple_project/: models.py  services.py  utils.py
tests/fixtures/simple_project/sub/: __init__.py  helpers.py
tests/graph/: test_models.py  test_persistence.py  test_queries.py  test_store.py
tests/web/: test_routes.py  test_serializers.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/graph/: GraphContainer.tsx  GraphEvents.tsx  GraphFilters.tsx  GraphLoader.tsx  LayoutController.tsx  NodeHighlighter.tsx
web/src/components/layout/: Header.tsx  Sidebar.tsx  StatusBar.tsx
web/src/components/panels/: CircularDepsPanel.tsx  NodeDetailPanel.tsx
web/src/components/search/: SearchBar.tsx
web/src/hooks/: useGraphData.ts
web/src/styles/: index.css
web/src/types/: graph.ts
web/src/utils/: colors.ts  folders.ts
