[project]
name = "pyxus"
version = "0.1.0"
description = "Python Code Intelligence Engine — static analysis knowledge graph exposed via MCP for AI agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Rayver Aimar Muñoz Curi", email = "rayver.munoz@ucsp.edu.pe" },
]
requires-python = ">=3.12"
keywords = ["static-analysis", "code-intelligence", "mcp", "knowledge-graph", "python", "django"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rustworkx>=0.15",
    "fastmcp>=3.0",
    "click>=8.0",
    "leidenalg>=0.10",
    "python-igraph>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[project.scripts]
pyxus = "pyxus.cli:main"

[project.urls]
Homepage = "https://github.com/RayverAimar/pyxus"
Repository = "https://github.com/RayverAimar/pyxus"
Issues = "https://github.com/RayverAimar/pyxus/issues"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
